[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a2a-utils"
dynamic = ["version"]
description = "A collection of utility functions for the Agent2Agent (A2A) protocol"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
keywords = ["a2a", "a2anet", "agent", "agent2agent", "multi-agent", "llm", "ai", "utils", "utilities"]
authors = [
  { name = "A2A Net", email = "hello@a2anet.com" },
]
classifiers = [ 
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
]

[project.urls]
Documentation = "https://github.com/A2ANet/a2a-utils#readme"
Issues = "https://github.com/A2ANet/a2a-utils/issues"
Source = "https://github.com/A2ANet/a2a-utils"

[tool.hatch.version]
path = "src/a2a_utils/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/a2a_utils}"

[tool.hatch.envs.lint]
extra-dependencies = [
  "ruff"
]
[tool.hatch.envs.lint.scripts]
check = "ruff check {args:src/a2a_utils}"
format = "ruff format {args:src/a2a_utils}"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.mypy]
python_version = "3.13"
strict = true
